# MoreWaita

./: AUTHORS  CONTRIBUTING.md  PACKAGING.md  README.md  dump_groups.py  dump_regulars.sh  index.theme  install.sh  local-install.sh  meson.build  mimes@2x  panel@2x  places@2x  status@2x  system-install.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: icon-request.md  icon-request.yml
.github/workflows/: ci.yml
_dev/: custom_folder_icons.sh  dump_groups.py  dump_regulars.sh
_extras/: application-pgp-keys.xml  application-x-pem-key.xml  application-x-spectrum.xml  chemical-x-cache.xml  custom_folder_icons.sh  text-pureDataPatch.xml  text-x-pkgbuild.xml
apps/: meson.build
apps/scalable/: com.skype.Client  meson.build  net.sourceforge.projectM
apps/symbolic/: com.gitlab.davem.ClamTk  com.skype.Client  meson.build  net.sf.fuse_emulator  net.sourceforge.projectM
mimes/: meson.build
mimes/scalable/: meson.build
panel/: meson.build  scalable
panel/scalable/: meson.build
panel/symbolic/: meson.build
places/: meson.build
places/scalable/: meson.build
places/symbolic/: meson.build
scalable/: meson.build
scalable/apps/: meson.build  photorec.ses
scalable/devices/: meson.build
scalable/legacy/: meson.build
scalable/mimes/: meson.build
scalable/mimetypes/: meson.build
scalable/places/: meson.build
status/: meson.build
status/scalable/: meson.build
symbolic/: meson.build
symbolic/apps/: meson.build
symbolic/legacy/: meson.build
symbolic/panel/: meson.build
symbolic/places/: meson.build
symbolic/status/: meson.build
