scalable_apps_iconsdir = join_paths(apps_iconsdir, 'scalable')

regular_files = [
    'accessories-character-map.svg',
    'alacritty.svg',
    'android-studio-canary.svg',
    'androidstudio.svg',
    'anydesk.svg',
    'assistant.svg',
    'atomix.svg',
    'audacity.svg',
    'bitwarden.svg',
    'bleachbit.svg',
    'brave-desktop.svg',
    'btop.svg',
    'carla-control.svg',
    'carla.svg',
    'chromium-browser.svg',
    'clamtk.svg',
    'clion.svg',
    'CMakeSetup.svg',
    'code-oss.svg',
    'com.github.eneshecan.WhatsAppForLinux.svg',
    'com.obsproject.Studio.svg',
    'cups.svg',
    'darktable.svg',
    'datagrip.svg',
    'dataspell.svg',
    'discord-canary.svg',
    'discord.svg',
    'eclipse.svg',
    'electron.svg',
    'facebook-messenger.svg',
    'figma.svg',
    'filezilla.svg',
    'firefox-developer-edition.svg',
    'firefox.svg',
    'firewall-config.svg',
    'fish.svg',
    'fleet.svg',
    'fr.handbrake.ghb.svg',
    'fuse-emulator.svg',
    'gda-browser-5.0.svg',
    'gda-control-center.svg',
    'gimp.svg',
    'github-desktop.svg',
    'gnome-nettool.svg',
    'godot.svg',
    'goland.svg',
    'google-chrome.svg',
    'google-earth.svg',
    'gparted.svg',
    'gpsd-logo.svg',
    'grub-customizer.svg',
    'gsmartcontrol.svg',
    'gufw.svg',
    'guiscrcpy.svg',
    'hardinfo.svg',
    'hp_logo.svg',
    'htop.svg',
    'hwloc.svg',
    'insomnia.svg',
    'intellij.svg',
    'io.element.Element.svg',
    'io.github.quodlibet.ExFalso.svg',
    'io.github.quodlibet.QuodLibet.svg',
    'java-openjdk.svg',
    'jetbrains-toolbox.svg',
    'kate.svg',
    'kdenlive.svg',
    'krita.svg',
    'kruler.svg',
    'libreoffice-base.svg',
    'libreoffice-basic.svg',
    'libreoffice-calc.svg',
    'libreoffice-chart.svg',
    'libreoffice-draw.svg',
    'libreoffice-impress.svg',
    'libreoffice-math.svg',
    'libreoffice-startcenter.svg',
    'libreoffice-writer.svg',
    'linguist.svg',
    'mattermost.svg',
    'menulibre.svg',
    'microsoft-edge.svg',
    'micro.svg',
    'minecraft.svg',
    'mpv.svg',
    'net.poedit.Poedit.svg',
    'network-wired.svg',
    'nextcloud.svg',
    'nufraw.svg',
    'nvidia.svg',
    'nvim.svg',
    'one.alynx.showmethekey.svg',
    'onetagger.svg',
    'openra-cnc.svg',
    'openra-d2k.svg',
    'openra-ra.svg',
    'opera.svg',
    'org.gnome.PowerStats.svg',
    'org.inkscape.Inkscape.svg',
    'org.parlatype.Parlatype.svg',
    'osmscout-server.svg',
    'pacseek.svg',
    'pamac.svg',
    'pavucontrol.svg',
    'phpstorm.svg',
    'pidgin.svg',
    'popcorntime.svg',
    'postman.svg',
    'preferences-desktop-theme.svg',
    'preferences-system-network.svg',
    'projectM.svg',
    'protonvpn-gui.svg',
    'pure-maps.svg',
    'pycharm.svg',
    'qdbusviewer.svg',
    'qt5ct.svg',
    'QtProject-designer.svg',
    'qutebrowser.svg',
    'qv4l2.svg',
    'rawtherapee.svg',
    'rider.svg',
    'rubymine.svg',
    'scrcpy.svg',
    'shotwell.svg',
    'signal-desktop.svg',
    'skypeforlinux.svg',
    'slack.svg',
    'soundconverter.svg',
    'spotify.svg',
    'spyder.svg',
    'standard-notes.svg',
    'steam-icon.svg',
    'stellarium.svg',
    'stoken-gui.svg',
    'strawberry.svg',
    'sublime-merge.svg',
    'sublime-text.svg',
    'syncthing-gtk.svg',
    'system-software-install.svg',
    'teams.svg',
    'TeamViewer.svg',
    'telegram.svg',
    'texstudio.svg',
    'thunderbird.svg',
    'tor-browser.svg',
    'viber.svg',
    'vim.svg',
    'virt-manager.svg',
    'virtualbox.svg',
    'visual-studio-code.svg',
    'vivaldi.svg',
    'vlc.svg',
    'vscodium.svg',
    'webstorm.svg',
    'windscribe.svg',
    'xdvi.svg',
    'xsane.svg',
    'Zoom.svg',
    'zotero.svg',
    'zrythm.svg',
]

link_files = {
    'accessories-character-map.svg': [
        'gnome-character-map.svg',
    ],
    'alacritty.svg': [
        'com.alacritty.Alacritty.svg',
        'Alacritty.svg',
    ],
    'android-studio-canary.svg': [
        'androidstudio-preview.svg',
        'android-studio-beta.svg',
    ],
    'androidstudio.svg': [
        'com.google.AndroidStudio.svg',
        'android-studio.svg',
    ],
    'anydesk.svg': [
        'com.anydesk.Anydesk.svg',
    ],
    'assistant.svg': [
        'assistant-qt4.svg',
        'qtassistant.svg',
        'io.qt.Assistant.svg',
        'QtProject-assistant.svg',
        'assistant5.svg',
        'assistant-qt5.svg',
    ],
    'audacity.svg': [
        'org.audacityteam.Audacity.svg',
    ],
    'bitwarden.svg': [
        'com.bitwarden.desktop.svg',
        'appimagekit-bitwarden.svg',
    ],
    'brave-desktop.svg': [
        'brave-browser.svg',
    ],
    'btop.svg': [
        'bashtop.svg',
    ],
    'carla.svg': [
        'studio.kx.carla.svg',
    ],
    'chromium-browser.svg': [
        'chromium-browser-privacy.svg',
        'org.chromium.Chromium.svg',
        'chromium.svg',
        'chromium-freeworld.svg',
    ],
    'clamtk.svg': [
        'clamav.svg',
        'com.gitlab.davem.ClamTk.svg',
    ],
    'clion.svg': [
        'com.jetbrains.CLion.svg',
    ],
    'CMakeSetup.svg': [
        'cmake-gui.svg',
        'cmake.svg',
        'CMakeSetup32.svg',
    ],
    'code-oss.svg': [
        'com.visualstudio.code.oss.svg',
        'com.visualstudio.code-oss.svg',
    ],
    'com.github.eneshecan.WhatsAppForLinux.svg': [
        'io.bit3.WhatsAppQT.svg',
        'whatsapp-nativefier.svg',
        'whatsapp.svg',
        'whatsapp-for-linux.svg',
        'com.gigitux.gtkwhats.svg',
        'io.github.mimbrero.WhatsAppDesktop.svg',
        'whatsapp-desktop.svg',
        'whatsdesk.svg',
    ],
    'com.obsproject.Studio.svg': [
        'obs.svg',
    ],
    'cups.svg': [
        'system-config-printer.svg',
    ],
    'darktable.svg': [
        'org.darktable.Darktable.svg',
    ],
    'datagrip.svg': [
        'com.jetbrains.DataGrip.svg',
    ],
    'dataspell.svg': [
        'jetbrains-dataspell.svg',
        'com.jetbrains.DataSpell.svg',
        'com.jetbrains.dataspell.svg',
    ],
    'discord-canary.svg': [
        'com.discordapp.DiscordCanary.svg',
    ],
    'discord.svg': [
        'com.discordapp.Discord.svg',
    ],
    'eclipse.svg': [
        'org.eclipse.Javascript.svg',
        'org.eclipse.Committers.svg',
        'eclipse-cdt.svg',
        'org.eclipse.Java.svg',
    ],
    'electron.svg': [
        'electron19.svg',
        'electron18.svg',
        'electron4.svg',
        'electron6.svg',
        'electron17.svg',
        'electron2.svg',
        'electron16.svg',
        'electron20.svg',
        'electron9.svg',
        'electron12.svg',
        'io.atom.electron.BaseApp.svg',
    ],
    'facebook-messenger.svg': [
        'caprine.svg',
        'com.sindresorhus.Caprine.svg',
    ],
    'figma.svg': [
        'io.github.Figma_Linux.figma_linux.svg',
        'figma-linux.svg',
    ],
    'filezilla.svg': [
        'org.filezillaproject.Filezilla.svg',
    ],
    'firefox-developer-edition.svg': [
        'org.mozilla.FirefoxDevEdition.svg',
        'firefox-developer-icon.svg',
    ],
    'firefox.svg': [
        'mozilla-firefox.svg',
        'org.mozilla.firefox.svg',
        'firefox-bin.svg',
        'firefox-gtk3.svg',
        'firefox-icon.svg',
        'firefox-esr.svg',
        'firefox-default.svg',
        'firefox-original.svg',
        'firefox-mozilla-build.svg',
        'firefox-beta-bin.svg',
        'org.mozilla.Firefox.svg',
        'firefox-beta.svg',
    ],
    'firewall-config.svg': [
        'firewall-applet.svg',
    ],
    'fleet.svg': [
        'com.jetbrains.Fleet.svg',
    ],
    'fuse-emulator.svg': [
        'fuse.svg',
        'net.sf.fuse_emulator.svg',
    ],
    'gimp.svg': [
        'org.gimp.GIMP.svg',
    ],
    'github-desktop.svg': [
        'io.github.shiftey.Desktop.svg',
        'appimagekit-github-desktop.svg',
    ],
    'gnome-nettool.svg': [
        'gnome-nettools.svg',
    ],
    'godot.svg': [
        'godot-mono.svg',
        'lutris_godot-engine.svg',
        'org.godotengine.Godot.svg',
    ],
    'goland.svg': [
        'com.jetbrains.GoLand.svg',
    ],
    'google-chrome.svg': [
        'google-chrome2.svg',
        'com.google.Chrome.svg',
        'chrome-ighkikkfkalojiibipjigpccggljgdff-Default.svg',
        'googlechrome.svg',
    ],
    'google-earth.svg': [
        'googleearth.svg',
        'google-earth-pro.svg',
    ],
    'guiscrcpy.svg': [
        'appimagekit-guiscrcpy.svg',
    ],
    'hp_logo.svg': [
        'hplj1020_icon.svg',
        'hp-logo.svg',
        'hplip.svg',
        'hp-toolbox.svg',
    ],
    'insomnia.svg': [
        'rest.insomnia.Insomnia.svg',
    ],
    'intellij.svg': [
        'com.jetbrains.IntelliJ-IDEA-Ultimate.svg',
        'com.jetbrains.IntelliJ-IDEA-Community.svg',
    ],
    'io.element.Element.svg': [
        'element.svg',
        'element-desktop-bin.svg',
        'Element.svg',
        'im.riot.Riot.svg',
    ],
    'java-openjdk.svg': [
        'sun-java-jre8.svg',
        'java8-openjdk.svg',
        'java19-openjdk.svg',
        'sun-java32-jdk6.svg',
        'oracle_java8.svg',
        'sun-java-jre10.svg',
        'java-11-openjdk.svg',
        'sun-java-jdk10.svg',
        'java11-openjdk.svg',
        'sun-javaws-jre10.svg',
        'sun-java32-jdk7.svg',
        'oracle_java7.svg',
        'applications-java.svg',
        'sun-java-jdk5.svg',
        'sun-java-jdk8.svg',
        'sun-java-jdk7.svg',
        'sun-javaws-jdk7.svg',
        'java-1.8.0-openjdk.svg',
        'java17-openjdk.svg',
        'sun-java32-jdk8.svg',
        'java-13-openjdk.svg',
        'sun-javaws-jdk10.svg',
        'java16-openjdk.svg',
        'sun-java-jdk6.svg',
        'sun-javaws-jdk9.svg',
        'java-14-openjdk.svg',
        'java-jdk.svg',
        'javaws.svg',
        'java-1.6.0.svg',
        'java9-openjdk.svg',
        'sun-javaws32-jdk6.svg',
        'java-10-openjdk.svg',
        'java-1.8.0.svg',
        'sun-javaws-jre8.svg',
        'java14-openjdk.svg',
        'sun-javaws32-jdk8.svg',
        'sun-java32-jdk5.svg',
        'sun-javaws-jdk8.svg',
        'java12-openjdk.svg',
        'sun-javaws32-jdk7.svg',
        'sun-java-jdk9.svg',
        'java-12-openjdk.svg',
        'java10-openjdk.svg',
        'java20-openjdk.svg',
        'sun-javaws-jdk6.svg',
        'oracle-javaws.svg',
        'java13-openjdk.svg',
        'oracle_java9.svg',
        'java15-openjdk.svg',
        'java-1.7.0.svg',
        'java18-openjdk.svg',
        'oracle_java6.svg',
    ],
    'kate.svg': [
        'kate2.svg',
        'org.kde.kate.svg',
        'org.kde.plasma.katesessions.svg',
    ],
    'kdenlive.svg': [
        'org.kde.kdenlive.svg',
    ],
    'krita.svg': [
        'calligrakrita.svg',
        'org.kde.krita.svg',
        'calligrakrita2.svg',
        'lutris_krita-gemini.svg',
    ],
    'kruler.svg': [
        'gnome-screenruler.svg',
        'screenruler.svg',
        'org.kde.kruler.svg',
        'screenruler-icon.svg',
    ],
    'libreoffice-base.svg': [
        'libreoffice5.4-base.svg',
        'libreoffice6.0-base.svg',
        'org.libreoffice.LibreOffice.base.svg',
        'libreoffice7.2-base.svg',
        'libreoffice5.3-base.svg',
        'libreoffice7.0-base.svg',
        'libreoffice5.2-base.svg',
        'libreoffice7.4-base.svg',
        'libreoffice6.3-base.svg',
        'libreoffice7.3-base.svg',
        'libreoffice6.4-base.svg',
        'libreoffice5.0-base.svg',
        'libreoffice4.2-base.svg',
        'libreoffice5.1-base.svg',
        'libreoffice6.2-base.svg',
        'libreoffice7.1-base.svg',
        'libreoffice7.5-base.svg',
    ],
    'libreoffice-basic.svg': [
        'org.libreoffice.LibreOffice.basic.svg',
        'libreoffice7.5-basic.svg',
    ],
    'libreoffice-calc.svg': [
        'libreoffice7.2-calc.svg',
        'libreoffice7.5-calc.svg',
        'libreoffice6.0-calc.svg',
        'libreoffice7.0-calc.svg',
        'libreoffice7.1-calc.svg',
        'libreoffice6.3-calc.svg',
        'libreoffice7.3-calc.svg',
        'libreoffice6.4-calc.svg',
        'libreoffice5.0-calc.svg',
        'libreoffice4.2-calc.svg',
        'org.libreoffice.LibreOffice.calc.svg',
        'libreoffice5.4-calc.svg',
        'libreoffice7.4-calc.svg',
        'libreoffice5.1-calc.svg',
        'libreoffice6.2-calc.svg',
        'libreoffice5.3-calc.svg',
        'libreoffice5.2-calc.svg',
    ],
    'libreoffice-chart.svg': [
        'org.libreoffice.LibreOffice.chart.svg',
        'libreoffice7.5-chart.svg',
    ],
    'libreoffice-draw.svg': [
        'libreoffice7.3-draw.svg',
        'libreoffice6.0-draw.svg',
        'libreoffice5.2-draw.svg',
        'libreoffice7.1-draw.svg',
        'libreoffice7.0-draw.svg',
        'libreoffice6.2-draw.svg',
        'libreoffice5.1-draw.svg',
        'libreoffice7.5-draw.svg',
        'libreoffice6.3-draw.svg',
        'libreoffice5.4-draw.svg',
        'libreoffice7.2-draw.svg',
        'libreoffice7.4-draw.svg',
        'libreoffice5.0-draw.svg',
        'libreoffice6.4-draw.svg',
        'libreoffice4.2-draw.svg',
        'org.libreoffice.LibreOffice.draw.svg',
        'libreoffice5.3-draw.svg',
    ],
    'libreoffice-impress.svg': [
        'libreoffice6.0-impress.svg',
        'libreoffice7.1-impress.svg',
        'libreoffice5.4-impress.svg',
        'libreoffice7.0-impress.svg',
        'libreoffice7.3-impress.svg',
        'libreoffice7.2-impress.svg',
        'org.libreoffice.LibreOffice.impress.svg',
        'libreoffice6.2-impress.svg',
        'libreoffice5.3-impress.svg',
        'libreoffice6.4-impress.svg',
        'libreoffice7.5-impress.svg',
        'libreoffice4.2-impress.svg',
        'libreoffice5.2-impress.svg',
        'libreoffice5.1-impress.svg',
        'libreoffice7.4-impress.svg',
        'libreoffice6.3-impress.svg',
        'libreoffice5.0-impress.svg',
    ],
    'libreoffice-math.svg': [
        'libreoffice6.3-math.svg',
        'libreoffice5.3-math.svg',
        'libreoffice7.4-math.svg',
        'org.libreoffice.LibreOffice.math.svg',
        'libreoffice5.1-math.svg',
        'libreoffice6.2-math.svg',
        'libreoffice7.2-math.svg',
        'libreoffice6.4-math.svg',
        'libreoffice4.2-math.svg',
        'libreoffice7.1-math.svg',
        'libreoffice5.2-math.svg',
        'libreoffice5.4-math.svg',
        'libreoffice7.3-math.svg',
        'libreoffice6.0-math.svg',
        'libreoffice7.5-math.svg',
        'libreoffice7.0-math.svg',
        'libreoffice5.0-math.svg',
    ],
    'libreoffice-startcenter.svg': [
        'libreoffice7.5-main.svg',
        'libreoffice-main.svg',
        'libreoffice7.4-main.svg',
        'libreoffice6.3-main.svg',
        'libreoffice6.0-main.svg',
        'libreoffice7.2-main.svg',
        'libreoffice4.2-startcenter.svg',
        'libreoffice5.4.svg',
        'libreoffice6.4-main.svg',
        'libreoffice6.4-startcenter.svg',
        'libreoffice6.0-startcenter.svg',
        'libreoffice6.2-startcenter.svg',
        'libreoffice7.0-main.svg',
        'libreoffice5.4-main.svg',
        'libreoffice5.2-main.svg',
        'libreoffice5.2.svg',
        'libreoffice5.1-startcenter.svg',
        'libreoffice7.3-main.svg',
        'libreoffice7.5-startcenter.svg',
        'libreoffice5.0.svg',
        'libreoffice5.2-startcenter.svg',
        'libreoffice7.1-startcenter.svg',
        'libreoffice5.1-main.svg',
        'libreoffice5.4-startcenter.svg',
        'libreoffice5.3.svg',
        'libreoffice6.3-startcenter.svg',
        'libreoffice7.1-main.svg',
        'libreoffice5.0-main.svg',
        'libreoffice7.4-startcenter.svg',
        'libreoffice5.0-startcenter.svg',
        'libreoffice5.1.svg',
        'libreoffice5.3-startcenter.svg',
        'libreoffice7.0-startcenter.svg',
        'org.libreoffice.LibreOffice.main.svg',
        'libreoffice5.3-main.svg',
        'libreoffice7.3-startcenter.svg',
        'libreoffice7.2-startcenter.svg',
        'org.libreoffice.LibreOffice.startcenter.svg',
        'libreoffice6.0.svg',
        'libreoffice6.2-main.svg',
    ],
    'libreoffice-writer.svg': [
        'libreoffice6.2-writer.svg',
        'libreoffice5.2-writer.svg',
        'libreoffice7.5-writer.svg',
        'libreoffice7.2-writer.svg',
        'org.libreoffice.LibreOffice.writer.svg',
        'libreoffice7.0-writer.svg',
        'libreoffice5.1-writer.svg',
        'libreoffice5.3-writer.svg',
        'libreoffice6.0-writer.svg',
        'libreoffice7.3-writer.svg',
        'libreoffice6.4-writer.svg',
        'libreoffice7.4-writer.svg',
        'libreoffice6.3-writer.svg',
        'libreoffice4.2-writer.svg',
        'libreoffice5.0-writer.svg',
        'libreoffice5.4-writer.svg',
        'libreoffice7.1-writer.svg',
    ],
    'linguist.svg': [
        'QtProject-linguist.svg',
        'linguist-qt5.svg',
        'qtlinguist.svg',
        'io.qt.Linguist.svg',
        'linguist-qt4.svg',
        'linguist5.svg',
    ],
    'mattermost.svg': [
        'mattermost-desktop.svg',
        'mattermost-desktop-bin.svg',
        'com.mattermost.Desktop.svg',
    ],
    'menulibre.svg': [
        'org.bluesabre.MenuLibre.svg',
    ],
    'microsoft-edge.svg': [
        'com.microsoft.Edge.svg',
    ],
    'minecraft.svg': [
        'minecraft-launcher.svg',
        'com.mojang.Minecraft.svg',
        'minecraft-pi.svg',
        'lutris_minecraft.svg',
    ],
    'mpv.svg': [
        'mpv-icon-8bit-64x64.svg',
        'io.mpv.Mpv.svg',
    ],
    'net.poedit.Poedit.svg': [
        'poedit.svg',
    ],
    'nextcloud.svg': [
        'com.nextcloud.desktopclient.nextcloud.svg',
        'org.nextcloud.Nextcloud.svg',
        'Nextcloud.svg',
    ],
    'nvidia.svg': [
        'nvidia-ddm-mx.svg',
        'nvidia-current-updates-settings.svg',
        'nvidia-settings.svg',
        'nvidia-drivers-settings.svg',
        'nvidia-current-settings.svg',
        'nvidia-x-server-settings.svg',
        'nvidia-310-settings.svg',
    ],
    'nvim.svg': [
        'io.neovim.nvim.svg',
        'nvim-qt.svg',
        'org.daa.NeovimGtk.svg',
        'nvim-gtk.svg',
        'pynvim.svg',
    ],
    'openra-cnc.svg': [
        'net.openra.OpenRA.openra-cnc.svg',
    ],
    'openra-d2k.svg': [
        'net.openra.OpenRA.openra-d2k.svg',
    ],
    'openra-ra.svg': [
        'net.openra.OpenRA.svg',
    ],
    'org.gnome.PowerStats.svg': [
        'org.gnome.powerstats.svg',
        'gnome-power-statistics.svg',
    ],
    'org.inkscape.Inkscape.svg': [
        'inkscape-logo.svg',
        'inkscape.svg',
    ],
    'org.parlatype.Parlatype.svg': [
        'com.github.gkarsay.parlatype.svg',
        'parlatype.svg',
    ],
    'osmscout-server.svg': [
        'io.github.rinigus.OSMScoutServer.svg',
    ],
    'pacseek.svg': [
        'org.moson.pacseek.svg',
        'org.moson.Pacseek.svg',
    ],
    'pamac.svg': [
        'pamac-updater.svg',
        'pamac-manager.svg',
    ],
    'pavucontrol.svg': [
        'multimedia-volume-control.svg',
        'org.pulseaudio.pavucontrol.svg',
    ],
    'phpstorm.svg': [
        'com.jetbrains.PhpStorm.svg',
    ],
    'pidgin.svg': [
        'im.pidgin.Pidgin.svg',
    ],
    'popcorntime.svg': [
        'popcorntime-ru.svg',
        'popcorn-time.svg',
    ],
    'postman.svg': [
        'com.getpostman.Postman.svg',
    ],
    'projectM.svg': [
        'net.sourceforge.projectM.svg',
    ],
    'protonvpn-gui.svg': [
        'protonvpn-logo.svg',
    ],
    'pure-maps.svg': [
        'harbour-pure-maps.svg',
        'io.github.rinigus.PureMaps.svg',
    ],
    'pycharm.svg': [
        'com.jetbrains.PyCharm-Community.svg',
        'com.jetbrains.PyCharm-Professional.svg',
    ],
    'qdbusviewer.svg': [
        'qdbusviewer-qt4.svg',
        'qtdbusviewer.svg',
        'io.qt.Qdbusviewer.svg',
        'QtProject-qdbusviewer.svg',
        'qdbusviewer5.svg',
        'qdbusviewer-qt5.svg',
    ],
    'qt5ct.svg': [
        'qtconfig-qt4.svg',
        'qtconfig.svg',
        'qtconfig-qt5.svg',
        'qtconfig-qt6.svg',
        'qt6ct.svg',
    ],
    'QtProject-designer.svg': [
        'io.qt.Designer.svg',
    ],
    'qutebrowser.svg': [
        'org.qutebrowser.qutebrowser.svg',
    ],
    'qv4l2.svg': [
        'qvidcap.svg',
    ],
    'rawtherapee.svg': [
        'com.rawtherapee.RawTherapee.svg',
    ],
    'rider.svg': [
        'com.jetbrains.Rider.svg',
    ],
    'rubymine.svg': [
        'com.jetbrains.RubyMine.svg',
    ],
    'scrcpy.svg': [
        'qtscrcpy.svg',
    ],
    'shotwell.svg': [
        'org.gnome.Shotwell.svg',
    ],
    'signal-desktop.svg': [
        'org.signal.Signal.svg',
    ],
    'skypeforlinux.svg': [
        'com.skype.Client.svg',
        'ms-skype.svg',
        'skype.svg',
    ],
    'slack.svg': [
        'com.slack.Slack.svg',
    ],
    'soundconverter.svg': [
        'org.soundconverter.SoundConverter.svg',
    ],
    'spotify.svg': [
        'spotify-client.svg',
        'Spotify.svg',
        'spotify-linux-48x48.svg',
        'nuvolaplayer3_spotify.svg',
        'spotify-qt.svg',
        'eu.tiliado.NuvolaAppSpotify.svg',
        'com.spotify.Client.svg',
        'spotify-linux-512x512.svg',
    ],
    'spyder.svg': [
        'spyder3.svg',
    ],
    'standard-notes.svg': [
        'org.standardnotes.standardnotes.svg',
        'appimagekit-standard-notes.svg',
    ],
    'steam-icon.svg': [
        'steam.svg',
        'steam-launcher.svg',
        'com.valvesoftware.Steam.svg',
        'steampowered.svg',
    ],
    'stellarium.svg': [
        'org.stellarium.Stellarium.svg',
    ],
    'strawberry.svg': [
        'org.strawberrymusicplayer.strawberry.svg',
    ],
    'sublime-merge.svg': [
        'com.sublimemerge.App.svg',
    ],
    'sublime-text.svg': [
        'sublime_text.svg',
        'sublime-text2.svg',
        'sublimetext.svg',
        'sublime-text-3.svg',
        'sublime.svg',
        'com.sublimetext.three.svg',
        'sublime-text-2.svg',
    ],
    'syncthing-gtk.svg': [
        'syncthing.svg',
        'syncthingtray.svg',
        'me.kozec.syncthingtk.svg',
    ],
    'system-software-install.svg': [
        'synaptic.svg',
        'system-software-update.svg',
        'system-software-installer.svg',
    ],
    'teams.svg': [
        'brave-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'opera-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'msedge-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'com.microsoft.Teams.svg',
        'appimagekit-teams-for-linux.svg',
        'chrome-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'vivaldi-cifhbcnohmdccbgoicgdjpfamggdegmo-Default.svg',
        'com.github.IsmaelMartinez.teams_for_linux.svg',
        'teams-for-linux.svg',
    ],
    'TeamViewer.svg': [
        'teamviewer.svg',
    ],
    'telegram.svg': [
        'org.telegram.desktop.svg',
        'telegram-desktop.svg',
        'telegram-desktop-bin.svg',
    ],
    'texstudio.svg': [
        'org.texstudio.TeXstudio.svg',
    ],
    'thunderbird.svg': [
        'thunderbird-3.0.svg',
        'thunderbird-bin.svg',
        'thunderbird-mozilla-build.svg',
        'org.mozilla.Thunderbird.svg',
        'thunderbird-icon.svg',
    ],
    'tor-browser.svg': [
        'tor-browser-ru.svg',
        'torbrowser.svg',
        'tor.svg',
        'com.github.micahflee.torbrowser-launcher.svg',
        'tor-browser-en.svg',
    ],
    'viber.svg': [
        'com.viber.Viber.svg',
    ],
    'vim.svg': [
        'vim-qt.svg',
        'org.vim.Vim.svg',
        'gvim.svg',
    ],
    'virtualbox.svg': [
        'virtualbox-ose.svg',
    ],
    'visual-studio-code.svg': [
        'com.visualstudio.code.svg',
        'code.svg',
    ],
    'vivaldi.svg': [
        'vivaldi-stable.svg',
    ],
    'vlc.svg': [
        'org.videolan.VLC.svg',
    ],
    'vscodium.svg': [
        'com.vscodium.codium.svg',
    ],
    'webstorm.svg': [
        'com.jetbrains.WebStorm.svg',
    ],
    'xsane.svg': [
        'vuescan.svg',
        'blueman-scanner.svg',
        'com.hamrick.VueScan.svg',
        'deepin-scanner.svg',
        'gscan2pdf.svg',
        'yast-scanner.svg',
    ],
    'Zoom.svg': [
        'zoom-icon.svg',
        'zoom-desktop.svg',
        'us.zoom.Zoom.svg',
    ],
    'zotero.svg': [
        'org.zotero.Zotero.svg',
    ],
}

install_data(regular_files, install_dir: scalable_apps_iconsdir)

foreach dest_file, link_files_for_dest : link_files
    foreach link_file : link_files_for_dest
        install_symlink(link_file, install_dir: scalable_apps_iconsdir, pointing_to: dest_file)
    endforeach
endforeach
